# jacl

./: .gitignore  CMakeLists.txt  CMakePresets.json  entry.c  test.j
docs/: GRAMMAR.md  README.md  TODO.md
include/: arena.h  assert.h  ast.h  darray.h  diagnostics.h  error.h  gen.h  generator.hpp  ir.h  jacldefs.hpp  lex.h  lexer.hpp  log.hpp  options.hpp  parser.hpp  stack.h  symbol.h  token.hpp  type.h
include/lang/: func_decl.hpp  func_def.hpp  literal.hpp  node.hpp  program.hpp  qualified_type.hpp  return.hpp  root_statement.hpp  scope.hpp  statement.hpp
include/parse/: node.hpp  parser.hpp
src/: CMakeLists.txt  array.c  array.h  ast.c  debug_ast.h  diagnostics.c  entry.c  error.c  error.h  expr.c  expr.h  gen.c  generator.cpp  hash.h  ir.c  jaclang.h  lex.c  lexer.cpp  log.h  main.c  main.cpp  mem.c  mem.h  nodes.h  options.cpp  parse.c  parse.h  parser.cpp  symbol.c  token.cpp  tokenize.c  tokenize.h  tokens.c  tokens.h  types.h  variable.h
src/lang/: func_decl.cpp  func_def.cpp  literal.cpp  program.cpp  qualified_type.cpp  return.cpp  root_statement.cpp  scope.cpp  statement.cpp
src/parse/: func_def.cpp  literal.cpp  parser.cpp  program.cpp  qualified_type.cpp  return.cpp  scope.cpp  statement.cpp
tests/: 1.j  CMakeLists.txt  test.c
